--- a/nonsmooth_rewrite/hillclimbing_nonsmooth.bib
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth.bib
@@ -287,4 +287,9 @@
   year={1965},
   publisher={Br Computer Soc}
 }
-
+@book{buhlmann2011statistics,
+  title={Statistics for high-dimensional data: methods, theory and applications},
+  author={B{\"u}hlmann, Peter and Van De Geer, Sara},
+  year={2011},
+  publisher={Springer Science \& Business Media}
+}
