add 2param hillclimb sgl

--- a/nonsmooth_rewrite/hillclimbing_nonsmooth_appendix.tex
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth_appendix.tex
@@ -152,7 +152,7 @@ The Hessian in this problem is
 \boldsymbol{H}(\boldsymbol\lambda) =
 \frac{1}{n} \boldsymbol X_{T, I(\boldsymbol \lambda)}^\top \boldsymbol X_{T, I(\boldsymbol \lambda)}
 + diag\left(
-\frac{\lambda_1^{(m)}}{|| \boldsymbol \theta^{(m)}||_2}
+\frac{\lambda_m}{|| \boldsymbol \theta^{(m)}||_2}
 \left (
 \boldsymbol I - 
 \frac{\boldsymbol \theta^{(m)} \boldsymbol \theta^{(m) \top}}{|| \boldsymbol \theta^{(m)}||_2^2}
